# rtc

./: .gitignore  CMakeLists.txt  canvas.cpp  canvas.hpp  matrix.hpp  ppm_writer.cpp  ppm_writer.hpp  rtc.cpp  tuple.cpp  tuple.hpp
tests/: CMakeLists.txt  canvas_test.cpp  matrix_test.cpp  tuple_test.cpp
